# debian-apt-push

./: CHANGELOG.md  Cargo.toml  README.md  apt-release.conf
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
pool/main/: moniter_1.0.1_amd64.deb
src/: app.rs  config.rs  event.rs  main.rs  sysinfo.rs  ui.rs
