[package]
name = "monitor"
version = "1.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/trapoom/moniter-sys"
homepage = "https://trapoom.github.io/moniter-sys/"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

parking_lot = "0.12"
crossbeam-channel = "0.5"

anyhow = "1.0"
thiserror = "1.0"

unicode-width = "0.1"
directories = "5.0"

chrono = "0.4"

log = "0.4"
simplelog = "0.12"

image = "0.25"

lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
